// E-Commerce Database - Simple Version

Table Users {
  id UUID [pk]
  username String [unique, not null]
  email String [unique, not null]
  password String [not null]
  fullName String [not null]
  phoneNumber String
  role String [default: 'customer', note: 'customer, admin']
  createdAt DateTime
  updatedAt DateTime
}

Table Category {
  id UUID [pk]
  categoryName String [unique, not null]
  description Text
  createdAt DateTime
  updatedAt DateTime
}

Table Product {
  id UUID [pk]
  categoryId UUID [not null]
  productName String [not null]
  description Text
  price Decimal [not null]
  stock Integer [not null]
  image String
  createdAt DateTime
  updatedAt DateTime
}

Table Cart {
  id UUID [pk]
  userId UUID [not null]
  createdAt DateTime
  updatedAt DateTime
}

Table CartItem {
  id UUID [pk]
  cartId UUID [not null]
  productId UUID [not null]
  quantity Integer [not null]
  unitPrice Decimal [not null]
  createdAt DateTime
  updatedAt DateTime
}

Table Order {
  id UUID [pk]
  userId UUID [not null]
  orderNumber String [unique, not null]
  totalAmount Decimal [not null]
  status String [default: 'pending', note: 'pending, processing, shipped, delivered, cancelled']
  shippingAddress Text [not null]
  orderDate DateTime [not null]
  createdAt DateTime
  updatedAt DateTime
}

Table OrderItem {
  id UUID [pk]
  orderId UUID [not null]
  productId UUID [not null]
  quantity Integer [not null]
  unitPrice Decimal [not null]
  subtotal Decimal [not null]
  createdAt DateTime
}

Table Payment {
  id UUID [pk]
  orderId UUID [not null, unique]
  paymentMethod String [note: 'credit_card, bank_transfer, cash']
  paymentStatus String [default: 'pending', note: 'pending, completed, failed']
  amount Decimal [not null]
  transactionId String
  paymentDate DateTime
  createdAt DateTime
  updatedAt DateTime
}

// Relationships
Ref: Product.categoryId > Category.id
Ref: Cart.userId > Users.id [delete: cascade]
Ref: CartItem.cartId > Cart.id [delete: cascade]
Ref: CartItem.productId > Product.id
Ref: Order.userId > Users.id [delete: cascade]
Ref: OrderItem.orderId > Order.id [delete: cascade]
Ref: OrderItem.productId > Product.id
Ref: Payment.orderId > Order.id [delete: cascade]
